# kage-ryu

./: .SRCINFO  LICENSE  PKGBUILD  README.md  config.last
sensor/: Cargo.toml  README.md  bifrost_guardian.py  install.sh  jett_daemon_changes.rs  kage-status  kage_sensor.bpf.c  logrotate.conf  uninstall.sh
sensor/systemd/: bifrost-guardian.service  jett.service  kage-sensor.service
sensor/test/: test_socket_ipc.py  test_verdict_logic.py
splash/: install-splash.sh  kage-ryu.plymouth  kage-ryu.script
