[package]
name    = "jett_daemon"
version = "0.1.0"
edition = "2021"
description = "jeTT — Real-Time eBPF AI Verdict Daemon for Kage-Ryu"

[[bin]]
name = "jett_daemon"
path = "jett_daemon_changes.rs"

[dependencies]
# eBPF skeleton / ring-buffer integration
libbpf-rs  = "0.24"
libbpf-sys = "1.4"

# Lazy static globals (BIFROST_SOCKET, QUARANTINE_MAP_FD)
lazy_static = "1"

# JSON event serialisation for Bifrost IPC
serde_json = "1"
